# face-detection-libface

./: .gitignore  CMakeLists.txt  README.md
include/: facedetectcnn.h
src/: main.cpp
